# hiring-cafe-take-home

./: README.md  SUBMISSION_FINAL.md  main.py  pyproject.toml
input/: domains.txt  job_urls.txt
output/: v2_jobs.jsonl
scraper/: client.py  discovery.py  models.py  parsing.py  portal_discovery.py
